# worklog

./: .env  .gitignore  Cargo.toml  docker-compose.yml  justfile
migrations/2022-10-12-005710_create_worklog/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
