[package]
name = "worklog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.13", features = ["derive"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenvy = "0.15"
